--- a/multisort/Rakefile
+++ b/multisort/Rakefile
@@ -1,5 +1,10 @@
 require "bundler/gem_tasks"
+require "rake/testtask"
 require "rspec/core/rake_task"
+
+Rake::TestTask.new do |t|
+  t.test_files = FileList['test/*_test.rb']
+end
 
 RSpec::Core::RakeTask.new(:spec)
 
