--- a/multisort/Gemfile
+++ b/multisort/Gemfile
@@ -3,5 +3,6 @@ source 'https://rubygems.org'
 # Specify your gem's dependencies in multisort.gemspec
 gem "minitest"
 gem "contracts"
+gem "facter"
 
 gemspec
